--- a/which_pokemon.html
+++ b/which_pokemon.html
@@ -11,8 +11,8 @@ body {
 </head>
 <body>
 <h1 style="color:green">Flynn and Dad's Pokemon Quiz</h1>
-<img src="images/pokemon.jpg" width="50%">
-<a href="#start" style="color:orange" onclick="alert('hi flynn')">Start</a>
+<a href="index.html">home</a>
+<img src="images/pokemon.jpg" width="25%">
 <form>
 
 <h2>Question 1: What is your type?</h2>
